istio/istio-aio-mulitple-certs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smart-proxy-gateway
  namespace: test-deploy
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hao.meshlab.cn"
    - "test-service-a.deploy.com"
    - "test-service-b.deploy.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "hao.meshlab.cn"
    - "test-service-a.deploy.com"
    - "test-service-b.deploy.com"
    tls:
      mode: SIMPLE #enables HTTPS on this port
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "static.cloudeliver.cn"
    tls:
      mode: SIMPLE
      serverCertificate: /root/tls-certs/static.cloudeliver.cn.crt
      privateKey: /root/tls-certs/static.cloudeliver.cn.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice-v1
  namespace: test-deploy
spec:
  hosts:
  - "hao.meshlab.cn"
  - "test-service-a.deploy.com"
  gateways:
  - smart-proxy-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: smart-proxy-service-only-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice-v2
  namespace: test-deploy
spec:
  hosts:
  - "test-service-b.deploy.com"
  - "static.cloudeliver.cn"
  gateways:
  - smart-proxy-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: smart-proxy-service-only-v2
