istio/istio-aio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smart-proxy-gateway
  namespace: test-deploy
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice-v1
  namespace: test-deploy
spec:
  hosts:
  - "test-service-a.deploy.com"
  gateways:
  - smart-proxy-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: smart-proxy-service-only-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice-v2
  namespace: test-deploy
spec:
  hosts:
  - "test-service-b.deploy.com"
  gateways:
  - smart-proxy-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: smart-proxy-service-only-v2
