istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
  - reviews.prod.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: smart-proxy-7859ddfcdd-6hb6d.test-deploy.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: smart-proxy-7859ddfcdd-6hb6d.test-deploy.svc.cluster.local
        subset: v1
